--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Birthday Gift - CodeMasala</title>
+        <title>Birthday Jinilin</title>
         
         <!-- Link CSS Style.css file-->
         
